<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.login.LoginActivity"
    android:orientation="vertical">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <LinearLayout
                    android:gravity="center"
                    android:background="@drawable/fondogris"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:src="@drawable/mas_card"
                        android:layout_weight="1"
                        android:layout_marginTop="16dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/imageView3" />
                    <TextView
                        android:text="@string/register_subtitle_login"
                        android:paddingLeft="32dp"
                        android:layout_weight="2"
                        android:layout_marginTop="16dp"
                        android:layout_gravity="top"
                        android:paddingRight="32dp"
                        android:gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView3" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="40dp" />

                </LinearLayout>
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:gravity="center"
                    android:layout_height="wrap_content">
                    <LinearLayout
                        android:orientation="vertical"
                        android:gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="16dp">
                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/til_card"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" >
                            <android.support.v7.widget.AppCompatEditText
                                android:layout_width="match_parent"
                                android:inputType="number"
                                android:enabled="false"
                                android:digits="0123456789*"
                                android:hint="@string/login_card"
                                android:maxLength="16"
                                android:text=""
                                android:layout_height="wrap_content"
                                android:id="@+id/et_card" />
                        </android.support.design.widget.TextInputLayout>


                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/til_pass"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:passwordToggleEnabled="false">
                            <android.support.v7.widget.AppCompatEditText
                                android:layout_width="match_parent"
                                android:inputType="numberPassword"
                                app:passwordToggleEnabled="false"
                                android:hint="Password"
                                android:text=""
                                android:maxLength="6"
                                android:layout_height="wrap_content"
                                android:id="@+id/et_pass" />
                        </android.support.design.widget.TextInputLayout>
                        <android.support.v7.widget.AppCompatButton
                            android:id="@+id/btn_continuar"
                            style="@style/Widget.AppCompat.Button.Colored"
                            android:text="@string/login_iniciar"
                            android:layout_marginTop="16dp"
                            android:enabled="true"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                        <android.support.v7.widget.AppCompatButton
                            android:id="@+id/btn_forgot_pass"
                            android:layout_marginTop="16dp"
                            android:text="OLVIDE MI CONTRASEÑA"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </FrameLayout>
    </ScrollView>
</LinearLayout>
