<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.login.LoginActivity"
    android:orientation="vertical">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:gravity="center_horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">


                    <LinearLayout
                        android:gravity="center"
                        android:background="@drawable/fondogris"
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:src="@drawable/mas_card"
                            android:layout_marginTop="32dp"
                            android:layout_weight="1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/imageView3" />

                        <TextView
                            android:text="@string/register_subtitle"
                            android:layout_weight="2"
                            android:layout_marginTop="16dp"
                            android:layout_gravity="top"
                            android:paddingLeft="32dp"
                            android:paddingRight="32dp"
                            android:gravity="center"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/textView3" />
                        
                        <View
                            android:layout_width="match_parent"
                            android:layout_height="40dp" />

                    </LinearLayout>


                </LinearLayout>
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:gravity="center"
                    android:animateLayoutChanges="true"
                    android:layout_height="wrap_content">
                    <LinearLayout
                        android:orientation="vertical"
                        android:gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="16dp">
                        <LinearLayout
                            android:id="@+id/ll_tarjeta"
                            android:orientation="vertical"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">
                            <android.support.design.widget.TextInputLayout
                                android:id="@+id/til_card"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content" >
                                <android.support.v7.widget.AppCompatEditText
                                    android:layout_width="match_parent"
                                    android:inputType="number"
                                    android:digits="0123456789 "
                                    android:hint="@string/register_card"
                                    android:maxLength="19"
                                    android:layout_height="wrap_content"
                                    android:id="@+id/et_card" />
                            </android.support.design.widget.TextInputLayout>
                            <android.support.design.widget.TextInputLayout
                                android:id="@+id/til_nip"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                app:passwordToggleEnabled="false">
                                <android.support.v7.widget.AppCompatEditText
                                    android:layout_width="match_parent"
                                    android:inputType="numberPassword"
                                    app:passwordToggleEnabled="false"
                                    android:hint="@string/register_nip"
                                    android:text=""
                                    android:maxLength="4"
                                    android:layout_height="wrap_content"
                                    android:id="@+id/et_nip" />
                            </android.support.design.widget.TextInputLayout>

                            <android.support.v7.widget.AppCompatButton
                                android:id="@+id/btn_terms"
                                android:layout_gravity="center"
                                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                                android:text="Ver Términos y condiciones"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />

                            <android.support.v7.widget.AppCompatCheckBox
                                android:id="@+id/btn_acept_terminos"
                                android:layout_gravity="center"
                                android:textAllCaps="false"
                                android:text="He leído y acepto los términos y condiciones"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />


                            <android.support.v7.widget.AppCompatButton
                                android:gravity="center"
                                android:layout_gravity="center"
                                android:layout_marginTop="16dp"
                                android:id="@+id/btn_continuar"
                                style="@style/Widget.AppCompat.Button.Colored"
                                android:text="@string/register_iniciar"
                                android:enabled="false"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />
                        </LinearLayout>
                        <LinearLayout
                            android:id="@+id/ll_passwors"
                            android:animateLayoutChanges="true"
                            android:visibility="gone"
                            android:orientation="vertical"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">
                            <android.support.design.widget.TextInputLayout
                                android:id="@+id/til_pass"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                app:passwordToggleEnabled="false">
                                <android.support.v7.widget.AppCompatEditText
                                    android:layout_width="match_parent"
                                    android:inputType="numberPassword"
                                    app:passwordToggleEnabled="false"
                                    android:hint="Contraseña 6 dígitos"
                                    android:text=""
                                    android:maxLength="6"
                                    android:layout_height="wrap_content"
                                    android:id="@+id/et_pass" />
                            </android.support.design.widget.TextInputLayout>
                            <android.support.design.widget.TextInputLayout
                                android:id="@+id/til_pass2"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                app:passwordToggleEnabled="false">
                                <android.support.v7.widget.AppCompatEditText
                                    android:layout_width="match_parent"
                                    android:inputType="numberPassword"
                                    app:passwordToggleEnabled="false"
                                    android:hint="Confirmar Contraseña"
                                    android:text=""
                                    android:maxLength="6"
                                    android:layout_height="wrap_content"
                                    android:id="@+id/et_pass2" />
                            </android.support.design.widget.TextInputLayout>
                            <android.support.v7.widget.AppCompatButton
                                android:gravity="center"
                                android:layout_gravity="center"
                                android:layout_marginTop="16dp"
                                android:id="@+id/btn_continuar_2"
                                style="@style/Widget.AppCompat.Button.Colored"
                                android:text="@string/register_iniciar_guardar"
                                android:enabled="true"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
    </ScrollView>
</LinearLayout>
